svtools/source/control/fmtfield.cxx
@@ -699,7 +699,7 @@ void FormattedField::FormatChanged( FORMAT_CHANGE_TYPE _nWhat )
     m_pLastOutputColor = nullptr;
 
     if ( (_nWhat == FORMAT_CHANGE_TYPE::FORMATTER) && m_pFormatter )
-        m_pFormatter->SetEvalDateFormat( NF_EVALDATEFORMAT_INTL_FORMAT );
+        m_pFormatter->SetEvalDateFormat( NF_EVALDATEFORMAT_FORMAT_INTL );
 
     ReFormat();
 }
